Modify: getFile not work, add some tests